--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,14 @@ swig/*
 *.swp
 *.patch
 aclocal.m4
+autoscan*.log
 config.h
 config.log
 config.sub
 config.guess
 config.status
 configure
+configure.scan
 depcomp
 install-sh
 compile
@@ -40,7 +42,10 @@ USBFlux/build
 USBFlux/USBFlux.xcodeproj/project.xcworkspace/xcshareddata/
 USBFlux/USBFlux.xcodeproj/project.xcworkspace/xcuserdata/
 USBFlux/USBFlux.xcodeproj/xcuserdata/
+USBFlux/USBFlux.xcodeproj/*.pbxuser
+USBFlux/USBFlux.xcodeproj/*.perspectivev3
 *.zip
 *.dmg
 create-dmg
 .DS_Store
+*.dSYM
