--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 AUTOMAKE_OPTIONS = foreign
-ACLOCAL_AMFLAGS = -I m4
+ACLOCAL_AMFLAGS = -I m4 --install
 SUBDIRS = src tools
 
 EXTRA_DIST = COPYING.GPLv2 COPYING.GPLv3
