--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -65,7 +65,8 @@ jobs:
         if test -x "$(which brew)"; then
           brew install make automake autoconf libtool pkg-config gcc libimobiledevice usbmuxd
         elif test -x "$(which apt-get)"; then
-          sudo apt-get install make automake autoconf libtool pkg-config gcc libimobiledevice usbmuxd
+          sudo apt-get update
+          sudo apt-get install make automake autoconf libtool pkg-config gcc libplist usbmuxd socat
         fi
 
     # Autobuild attempts to build any compiled languages (C/C++, C#, Go, Java, or Swift).
