look harder for libplist

--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -66,7 +66,7 @@ jobs:
           brew install make automake autoconf libtool pkg-config gcc libimobiledevice usbmuxd
         elif test -x "$(which apt-get)"; then
           sudo apt-get update
-          sudo apt-get install make automake autoconf libtool pkg-config gcc libplist-dev usbmuxd socat
+          sudo apt-get install make automake autoconf libtool pkg-config gcc libimobiledevice6 libplist3 libplist-dev libusbmuxd6 libusbmuxd-tools usbmuxd socat libavahi-client-dev
         fi
 
     # Autobuild attempts to build any compiled languages (C/C++, C#, Go, Java, or Swift).
