--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -69,18 +69,12 @@ jobs:
           sudo apt-get install make automake autoconf libtool pkg-config gcc libimobiledevice6 libplist3 libplist-dev libusbmuxd6 libusbmuxd-tools usbmuxd socat libavahi-client-dev
         fi
 
-    # Autobuild attempts to build any compiled languages (C/C++, C#, Go, Java, or Swift).
-    # If this step fails, then you should remove it and run the build manually (see below)
     - name: Autobuild
-      uses: github/codeql-action/autobuild@v2
-
     # Command-line programs to run using the OS shell.
-    # See https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
+    # See:
+    # https://docs.github.com/en/actions/using-workflows/workflow-syntax-for-github-actions#jobsjob_idstepsrun
 
-    #   If the Autobuild fails above, remove it and uncomment the following three lines.
-    #   modify them (or add more) to build your code if your project, please refer to the EXAMPLE below for guidance.
-
-    - run: |
+      run: |
         echo "Run, Build Application using script"
         ls
         if test -x "$(which xcodebuild)"; then cd USBFlux && xcodebuild; fi
