--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -42,7 +42,8 @@ jobs:
         # CodeQL supports [ 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift' ]
         # Use only 'java-kotlin' to analyze code written in Java, Kotlin or both
         # Use only 'javascript-typescript' to analyze code written in JavaScript, TypeScript or both
-        # Learn more about CodeQL language support at https://aka.ms/codeql-docs/language-support
+        # Learn more about CodeQL language support at:
+        # https://aka.ms/codeql-docs/language-support
 
     steps:
     - name: Checkout repository
@@ -57,7 +58,8 @@ jobs:
         # By default, queries listed here will override any specified in a config file.
         # Prefix the list here with "+" to use these queries and those in the config file.
 
-        # For more details on CodeQL's query packs, refer to: https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
+        # For more details on CodeQL's query packs, refer to:
+        # https://docs.github.com/en/code-security/code-scanning/automatically-scanning-your-code-for-vulnerabilities-and-errors/configuring-code-scanning#using-queries-in-ql-packs
         # queries: security-extended,security-and-quality
 
     - name: Install dependencies
@@ -66,7 +68,7 @@ jobs:
           brew install make automake autoconf libtool pkg-config gcc libimobiledevice usbmuxd
         elif test -x "$(which apt-get)"; then
           sudo apt-get update
-          sudo apt-get install make automake autoconf libtool pkg-config gcc libimobiledevice6 libplist3 libplist-dev libusbmuxd6 libusbmuxd-tools usbmuxd socat libavahi-client-dev
+          sudo apt-get install make automake autoconf libtool pkg-config gcc libimobiledevice6 libplist3 libplist-dev libplist-utils libusbmuxd6 libusbmuxd-tools usbmuxd socat libavahi-client-dev mlocate plocate findutils
         fi
 
     - name: Build
@@ -82,6 +84,23 @@ jobs:
         ./configure --with-static-libplist=no
         make
         make distcheck
+
+    - name: Debug failure
+      run: |
+        if test -r config.log; then cat config.log && wc -l config.log; elif test -e config.log; then stat config.log; else ls -AR; fi
+        echo "looking for libplist.a..."
+        if test -x "$(which locate)"; then \
+          (locate libplist.a || locate libplist-2.0.a); \
+        elif test -x "$(which mlocate)"; then \
+          (mlocate libplist.a || mlocate libplist-2.0.a); \
+        elif test -x "$(which plocate)"; then \
+          (plocate libplist.a || plocate libplist-2.0.a); \
+        elif test -x "$(which find)"; then \
+          (find / -name libplist.a || find / -name libplist-2.0.a || echo "not found!"); \
+        else \
+          echo "unsure how to find a static libplist!"; \
+        fi
+      if: "${{ failure() }}"
 
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v2
