--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -83,7 +83,7 @@ jobs:
         export NOCONFIGURE=yes && sh ./autogen.sh
         ./configure --with-static-libplist=no
         make
-        make distcheck
+        make check
 
     - name: Debug failure
       run: |
