more warning silencing
builds with Xcode on my current computer locally now

--- a/configure.ac
+++ b/configure.ac
@@ -234,7 +234,7 @@ if test "x${ac_cv_header_sys_socket_h}" = "x"; then
   AC_CHECK_HEADERS([sys/socket.h])
 fi
 
-AS_COMPILER_FLAGS([GLOBAL_CFLAGS],["-g -Wall -Wextra -Wmissing-declarations -Wredundant-decls -Wshadow -Wpointer-arith -Wwrite-strings -Wswitch-default -Wformat=2 -Werror=format-security -Wpedantic -Wc++-compat -Wno-unused-parameter"])
+AS_COMPILER_FLAGS([GLOBAL_CFLAGS],["-g -Wall -Wextra -Wmissing-declarations -Wredundant-decls -Wshadow -Wpointer-arith -Wwrite-strings -Wswitch-default -Wformat=2 -Werror=format-security -Wpedantic -Wno-unused-parameter"])
 AC_SUBST([GLOBAL_CFLAGS])dnl
 
 m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])dnl
