--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -68,7 +68,8 @@ jobs:
           brew install make automake autoconf libtool pkg-config gcc libimobiledevice usbmuxd
         elif test -x "$(which apt-get)"; then
           sudo apt-get update
-          sudo apt-get install make automake autoconf libtool pkg-config gcc libimobiledevice6 libplist3 libplist-dev libplist-utils libusbmuxd6 libusbmuxd-tools usbmuxd socat libavahi-client-dev shellcheck
+          sudo apt-get install make automake autoconf libtool pkg-config gcc libimobiledevice6 libplist-2.0-4 libplist-dev libplist-utils \
+            libusbmuxd6 libusbmuxd-tools usbmuxd socat libavahi-client-dev shellcheck
         fi
 
     - name: Build
